--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "lens-article",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/elifesciences/lens-article.git"
   },
   "dependencies": {
     "underscore": "1.5.x",
-    "substance-document": "git+https://github.com/substance/document.git#0.5.x",
-    "substance-util": "git+https://github.com/substance/util.git#0.2.x",
-    "substance-application": "git+https://github.com/substance/application.git#0.1.x",
-    "substance-operator": "git+https://github.com/substance/operator.git#0.2.x"
+    "substance-document": "master",
+    "substance-util": "master",
+    "substance-application": "master",
+    "substance-operator": "master"
   },
-  "version": "0.2.0",
+  "version": "0.1.0",
   "engines": {
     "node": ">=0.8.x",
     "npm": ">=1.1.x"
