--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   },
   "dependencies": {
     "underscore": "1.5.x",
-    "substance-document": "master",
-    "substance-util": "master",
-    "substance-application": "master",
-    "substance-operator": "master"
+    "substance-document": "0.5.0",
+    "substance-util": "0.2.0",
+    "substance-application": "0.1.0",
+    "substance-operator": "0.2.0"
   },
   "version": "0.1.0",
   "engines": {
